--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,17 +66,19 @@
         </div>
         <div class="nine columns main-description">
             <h1>{{ site.data.main_info.name }}</h1>
-            <p>{{ site.data.main_info.title }}</p>
+            <p style="line-height: 3"><b>{{ site.data.main_info.title }}</b></p>
             <p>{{ site.data.main_info.title2 }}</p>
-            <p>{{ site.data.main_info.email }}</p>
+            <p><a href="https://www.cs.aau.dk" target="_blank">Department of Computer Science</a></p>
+            <p><a href="https://www.en.aau.dk" target="_blank">Aalborg University</a></p>
+            <p>3.2.33, Selma Lagerlöfs Vej 300 DK-9220, Aalborg Øst, Denmark</p>
+            <p style="line-height: 3"> <b>Email:</b> {{ site.data.main_info.email }}</p>
             <p>
-              <span onclick="window.open('{{ site.data.main_info.twitter }}')" style="cursor: pointer">
+              <!-- <span onclick="window.open('{{ site.data.main_info.twitter }}')" style="cursor: pointer">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
-              </span>
-
-              <span onclick="window.open('{{ site.data.main_info.linkedin }}')" style="cursor: pointer">
+              </span> -->
+              <!-- <span onclick="window.open('{{ site.data.main_info.linkedin }}')" style="cursor: pointer">
                 <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-              </span>
+              </span> -->
 
               <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
                 <i class="fa fa-github" aria-hidden="true"></i>
@@ -84,6 +86,10 @@
 
               <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
                 <i class="fa fa-book" aria-hidden="true"></i>
+              </span>
+
+              <span onclick="window.open('{{ site.data.main_info.DBLP }}')" style="cursor: pointer">
+                <i class="fa fa-database" aria-hidden="true"></i>
               </span>
             </p>
         </div>
@@ -98,9 +104,10 @@
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#publications" | prepend: site.baseurl }}>Publications</a></li>
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#award" | prepend: site.baseurl }}>Awards</a></li>
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#people" | prepend: site.baseurl }}>Students</a></li>
+          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#project" | prepend: site.baseurl }}>Project</a></li>
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#services" | prepend: site.baseurl }}>Services</a></li>
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#teaching" | prepend: site.baseurl }}>Teaching</a></li>
-          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#resume" | prepend: site.baseurl }}>Resume</a></li>
+          <!-- <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#resume" | prepend: site.baseurl }}>Resume</a></li> -->
         </ul>
       </div>
     </nav>
