--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,13 +83,19 @@
                 <i class="fa fa-github" aria-hidden="true"></i>
               </span> -->
 
-              <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
-                <i class="fa fa-book" aria-hidden="true"></i>
-              </span>
+              <div style="margin-bottom: 5px">
+              <span onclick="window.open('https://scholar.google.com/citations?hl=en&user=NeeHV-IAAAAJ&view_op=list_works&sortby=pubdate')" style="cursor: pointer">
+                  <i class="fa fa-book" aria-hidden="true"></i>
+                  <span style="margin-left: 5px">Google Scholar</span>
+                </span>
+              </div>
 
-              <span onclick="window.open('{{ site.data.main_info.DBLP }}')" style="cursor: pointer">
-                <i class="fa fa-database" aria-hidden="true"></i>
-              </span>
+              <div>
+                <span onclick="window.open('https://dblp.org/pid/85/11154-5.html')" style="cursor: pointer">
+                  <i class="fa fa-database" aria-hidden="true"></i>
+                  <span style="margin-left: 5px">DBLP</span>
+                </span>
+              </div>
             </p>
         </div>
       </div>
